# GuitAR

./: LICENSE  README.md
Assets/: AudioProcessor.cs  FretManager.cs  Green.mat  Lesson.cs  Lesson1.cs  Lesson1Manager.cs  Lesson2.cs  Lesson3.cs  Lesson4.cs  LessonManager.cs  LessonTrigger.cs  MoveBlock.cs  Music.cs  New Universal Render Pipeline Asset.asset  New Universal Render Pipeline Asset_Renderer.asset  NewAudioScript.cs  SaveAndDisplayCurrentNote.cs  SimpleLessonManager.cs  Song1.cs  Song2.cs  Song3.cs  SongLessonManager.cs  SubLessonManager.cs  cube_main.cs  g.fbx  menu_script.cs  nb.unity  start_button.cs
Assets/AcousticGuitar/: DemoScene.unity  DemoSceneSettings.lighting  GuitarA.prefab
Assets/FlowScripts/: LessonButtonHandler.cs  PlayButtonHandler.cs
Assets/Fonts/: Menlo SDF.asset
Assets/GroKit/: GroKit-Core Documentation.url
Assets/GuitarHero/: DisplayNote.prefab  GenerateNoteManager.cs
Assets/Images/: PlayButton.afdesign  StartButton.afdesign
Assets/LessonScripts/: Lesson1.cs
Assets/Materials/: Cyan.mat  Semi-Transparent-Blue.mat  Semi-Transparent-Green 1.mat
Assets/NotationObjects/: DisplayNoteManager.cs
Assets/Oculus/: OculusProjectConfig.asset
Assets/Resources/: GroBlocksData.asset  GroKitConfig.asset  ImmersiveDebuggerSettings.asset  OculusRuntimeSettings.asset
Assets/Scenes/: AudioScene.unity  (+7 more)
Audio/: Android.mk  CMakeLists.txt  EssentiaPlugin.cpp
ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  ShaderGraphSettings.asset  TagManager.asset
(+398 files in other folders)
